--- a/style.css
+++ b/style.css
@@ -1,77 +1,72 @@
-body{
-    font-family: 'SF Pro Display', sans-serif;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
-header{
-    display: flex;
-    background-color: #2f2a2d;
-    justify-content: space-between;
-    color: #fafafa;
-    padding: 30px 80px;
-}
-button{
-    outline: none;
-}
-.logo{
 
-    text-transform: uppercase;
-    font-weight: bold;
+.logo {
+    display: flex;
+    justify-content: flex-start;
 }
-.btn-cart{
-    background-color: #fafafa;
-    padding: 10px 20px;
-    border: 1px solid transparent;
-    color: #2f2a2d;
-    border-radius: 5px;
-    transition: all ease-in-out .4s;
+
+.header {
+    padding: 1rem;
+    background: cadetblue;
+    font-size: 18px;
+    color: white;
+    font-weight: 700;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.center {
+    padding-left: calc(100% - 570px);
+    padding-right: calc(100% - 570px);
+}
+
+.btn-cart,
+.product__btn {
+    outline: none;
     cursor: pointer;
+    text-transform: uppercase;
+    border-radius: 5px;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    background: coral;
 }
-.btn-cart:hover{
-    background-color: transparent;
-    border-color: #fafafa;
-    color: #fafafa;
+
+.btn-cart:hover,
+.product__btn:hover {
+    background: rgb(248, 98, 44);
 }
-.btn-cart, .logo{
-    align-self: center;
-}
-.products{
-    column-gap: 30px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, 200px);
-    grid-template-rows: 1fr;
-    padding: 40px 80px;
+
+.products {
+    display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
-p {
-    margin: 0 0 5px 0;
-}
-.product-item{
+
+.product__item {
+    padding: 1rem;
+    border-radius: 5px;
     display: flex;
     flex-direction: column;
-    width: 200px;
-    border-radius: 5px;
-    overflow: hidden;
-    margin: 20px 0;
+    margin: 30px;
+    box-shadow: 2px 2px 5px #222222;
 }
-img {
-    max-width: 100%;
-    height: auto
+
+.product__item h3 {
+    text-align: center;
+    color: darkviolet;
 }
-.desc {
-    border: 1px solid #c0c0c040;
-    padding: 15px
-}
-.buy-btn{
-    margin-top: 5px;
-    background-color: #2f2a2d;
-    padding: 10px 20px;
-    border: 1px solid transparent;
-    color: #fafafa;
-    border-radius: 5px;
-    transition: all ease-in-out .4s;
-    cursor: pointer;
-}
-.buy-btn:hover{
-    background-color: transparent;
-    border-color: #2f2a2d;
-    color: #2f2a2d;
+
+.product__item p {
+    margin: 2rem 1rem;
+    background: rgb(207, 205, 205);
+    text-align: right;
+    font-weight: 900;
+    color: red;
 }
