--- a/style.css
+++ b/style.css
@@ -1,171 +1,209 @@
-body{
-    font-family: 'SF Pro Display', sans-serif;
+body {
+    font-size: 16px;
 }
-header{
-    display: flex;
-    background-color: #2f2a2d;
-    justify-content: space-between;
-    color: #fafafa;
-    padding: 30px 80px;
-}
-button:focus{
-    outline: none;
-}
-.logo{
 
+.center {
+    padding-left: calc(100% / 2 - 570px);
+    padding-right: calc(100% / 2 - 570px);
+}
+
+.header {
+    padding: 1rem;
+    background: cadetblue;
+    color: white;
     text-transform: uppercase;
-    font-weight: bold;
+    font-weight: 700;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-.btn-cart{
-    background-color: #fafafa;
-    padding: 10px 20px;
-    border: 1px solid transparent;
-    color: #2f2a2d;
-    border-radius: 5px;
-    transition: all ease-in-out .4s;
+
+.logo {
     cursor: pointer;
+    flex-grow: 1;
 }
-.btn-cart:hover{
-    background-color: transparent;
-    border-color: #fafafa;
-    color: #fafafa;
+
+.search {
+    margin-right: 1rem;
+    display: flex;
+    align-items: center;
+    position: relative;
 }
-.btn-cart, .logo{
+
+.search__fld {
+    padding: 0.5rem;
+    background: none;
+    outline: none;
+    color: cadetblue;
+    border: none;
+    border-bottom: 2px solid white;
+    transition: background 0.3s;
+}
+
+.search__fld:focus {
+    background: white;
+    outline: none;
+    border-bottom: 1px solid white;
+    transition: background 0.3s;
+}
+
+.search__btn {
+    background: none;
+    outline: none;
+    border: none;
+    position: absolute;
+    right: 0;
+}
+.btn-cart,
+.buy_btn,
+.cart-del-btn {
     align-self: center;
+    outline: none;
+    cursor: pointer;
+    text-transform: uppercase;
+    border-radius: 3px;
+    border: 1px solid white;
+    color: white;
+    font-weight: 700;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    background: cadetblue;
+    transition: 0.4s;
 }
-/*.products {*/
-/*display: flex;*/
-/*justify-content: space-between;*/
-/*flex-wrap: wrap;*/
-/*padding: 40px 80px;*/
-/*}*/
-.products{
-    column-gap: 30px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, 200px);
-    grid-template-rows: 1fr;
-    padding: 40px 80px;
+
+.btn-cart:hover,
+.buy_btn:hover,
+.cart-del-btn:hover {
+    transition: 0.4s;
+    background: white;
+    color: black;
+}
+
+.products {
+    display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
-p {
-    margin: 0 0 5px 0;
-}
-.product-item{
+
+.product__item {
+    padding: 1rem;
+    border-radius: 3px;
     display: flex;
     flex-direction: column;
-    width: 200px;
-    border-radius: 5px;
-    overflow: hidden;
-    margin: 20px 0;
-}
-img {
-    max-width: 100%;
-    height: auto
-}
-.desc {
-    border: 1px solid #c0c0c040;
-    padding: 15px
-}
-.cart{
-    position: relative;
-}
-.cart-block{
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
-    border-radius: 5px;
-    box-sizing: border-box;
-    right: 0;
-    top: 130%;
-    position: absolute;
-    background-color: white;
-    padding: 20px;
-    color: black;
-    width: 300px;
-}
-
-.invisible{
-    display: none;
-}
-.cart-block:before{
-    content: '';
-    width: 0;
-    height: 0;
-    position: absolute;
-    top: -10px;
-    right: 35px;
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-    border-bottom: 10px solid white;
-}
-
-.buy-btn, .del-btn{
-    margin-top: 5px;
-    background-color: #2f2a2d;
-    padding: 5px 15px;
-    border: 1px solid transparent;
-    color: #fafafa;
-    border-radius: 5px;
-    transition: all ease-in-out .4s;
+    margin: 1rem;
+    box-shadow: 1px 1px 3px #222222;
     cursor: pointer;
 }
-.buy-btn:hover, .del-btn:hover{
-    background-color: #fafafa;
-    color: #2f2a2d;
-    border: 1px solid #2f2a2d;
-}
-.cart-item {
+
+.product__info {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
 }
-.cart-item:not(:last-child){
-    margin-bottom: 20px;
+
+.product__item h3 {
+    text-align: center;
+    color: darkviolet;
 }
-.product-bio{
-    display: flex;
+
+.product__item p {
+    margin: 1rem;
+    text-align: center;
+    font-weight: 900;
+    color: red;
 }
-.cart-item img{
-    align-self: flex-start;
-    margin-right: 15px;
-}
-.product-single-price{
-    color: #474747;
-    font-size: 0.5em;
-}
-.product-price{
-    margin-left: 30px;
-}
-.product-desc{
-    max-width: 150px;
-}
-.product-quantity {
-    margin-top: 15px;
-    font-size: 0.75em;
-}
-.right-block{
-    text-align: right;
-}
-.btn-search {
-    background-color: transparent;
-    border: none;
-    color: #fafafa;
-    font-size: 1.2em;
-    position: absolute;
-    bottom: 5px;
-    right: 0;
-}
-.search-form{
+.bascet-box {
+    height: 100%;
     position: relative;
-    margin-right: 50px;
-    display: inline-block;
 }
-.search-field:focus{
-    outline: none;
+
+.bascet {
+    padding: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-between;
+    font-size: 14px;
+    position: absolute;
+    top: calc(100% + 18px);
+    right: 0;
+    background: white;
+    border: 1px solid #222222;
+    border-radius: 3px;
+    box-shadow: 1px 1px 3px #222222;
+    z-index: 100;
 }
-.search-field {
-    box-sizing: border-box;
-    width: 200px;
-    color: #fafafa;
-    padding: 10px;
-    background-color: transparent;
-    border: none;
-    border-bottom: 2px solid #fafafa;
+
+.bascet::before {
+    content: '';
+    border-left: 1px solid #222222;
+    border-top: 1px solid #222222;
+    background: white;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    transform: rotate(45deg);
+    top: -12px;
+    right: 50px;
+}
+
+.bascet__item {
+    display: flex;
+    text-transform: none;
+    align-items: center;
+    padding: 0.5rem;
+    justify-content: space-between;
+    border-bottom: 1px solid #222222;
+    cursor: pointer;
+}
+
+.product__item:hover,
+.bascet__item:hover {
+    background: #5f9ea047;
+}
+
+.bascet__info {
+    margin: 0 2rem;
+    align-self: flex-start;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    white-space: nowrap;
+}
+
+.bascet__item h3 {
+    margin-bottom: 0.5rem;
+    text-align: left;
+    color: darkviolet;
+}
+
+.bascet__item p {
+    margin-top: 0.25rem;
+    margin-bottom: 0.25rem;
+    margin-left: 2rem;
+    text-align: right;
+    font-weight: 900;
+    color: red;
+}
+
+.bascet__item img {
+    width: 100px;
+}
+
+.bascet__summary {
+    margin-top: 1rem;
+    color: black;
+    font-size: 16px;
+    text-align: right;
+    font-weight: 900;
+    white-space: nowrap;
+}
+
+.bascet__number {
+    margin-bottom: 1rem;
+    color: black;
+    font-size: 16px;
+    text-align: left;
+    font-weight: 900;
 }
